#72 - Fix action buttons alignment on mobile.

--- a/src/Recollections.Blazor.UI/wwwroot/css/site.scss
+++ b/src/Recollections.Blazor.UI/wwwroot/css/site.scss
@@ -24,6 +24,19 @@ blockquote {
     .right-actions {
         text-align: right;
     }
+
+    button {
+        margin-bottom: 4px;
+    }
+}
+
+@media (max-width:575px){
+    .actions {
+        button, form {
+            width: 100%;
+            display: block;
+        }
+    }
 }
 
 @import "_accounts.scss";
